# biotracker_interfaces

./: .gitignore  .gitlab-ci.py  .gitlab-ci.yml  CMakeLists.txt
Src/: CMakeLists.txt
Src/Interfaces/: API.h  ENUMS.cpp  ENUMS.h  IBioTrackerContext.cpp  IBioTrackerContext.h  IBioTrackerPlugin.cpp  IBioTrackerPlugin.h
Src/Interfaces/IController/: IController.cpp  IController.h
Src/Interfaces/IModel/: IModel.cpp  IModel.h  IModelAreaDescriptor.h  IModelDataExporter.cpp  IModelDataExporter.h  IModelTrackedComponent.cpp  IModelTrackedComponent.h  IModelTrackedComponentFactory.cpp  IModelTrackedComponentFactory.h  IModelTrackedTrajectory.cpp  IModelTrackedTrajectory.h  IModelTrackingAlgorithm.cpp  IModelTrackingAlgorithm.h  IObject.cpp  IObject.h  Serializable.cpp  Serializable.h
Src/Interfaces/IView/: IView.cpp  IView.h  IViewGraphicsPixmapItem.cpp  IViewGraphicsPixmapItem.h  IViewGraphicsScene.cpp  IViewGraphicsScene.h  IViewGraphicsView.cpp  IViewGraphicsView.h  IViewMainWindow.cpp  IViewMainWindow.h  IViewOpenGLWidget.cpp  IViewOpenGLWidget.h  IViewTrackedComponent.cpp  IViewTrackedComponent.h  IViewWidget.cpp  IViewWidget.h
ci/: configure.py
cmake/: BT_InterfacesConfig.cmake.in  Deploy.cmake  Windeployqt.cmake  biotracker-interfacesConfig.cmake.in
